<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>um982_py_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nguyenhatrung411@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rtcm_msgs</depend>
  <depend>navsat_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
